# rustreleaser

./: .gitignore  .justfile  Cargo.toml  LICENSE  README.md  TODO.md  releaser.toml
.cargo/: config.toml
src/: checksum.rs  cli.rs  config.rs  logger.rs  main.rs
src/brew/: install.rs  mod.rs  package.rs  repository.rs  target.rs
src/git/: mod.rs
src/github/: arch_os_matrix.rs  asset.rs  github_client.rs  inner.rs  macros.rs  mod.rs  pull_request.rs  release.rs  sha.rs  tag.rs
src/github/builder/: create_branch_builder.rs  create_pull_request_builder.rs  create_release_builder.rs  mod.rs  upsert_file_builder.rs
src/github/handler/: branch_handler.rs  branches_handler.rs  mod.rs  pull_request_handler.rs  release_handler.rs  releases_handler.rs  repository_handler.rs
src/github/model/: mod.rs  pull_request.rs  sha.rs
src/github/request/: branch_ref_request.rs  committer_request.rs  create_release_request.rs  mod.rs  pull_request_request.rs  upsert_file_request.rs
src/github/response/: assignees_request.rs  labels_request.rs  mod.rs  release_response.rs
src/github/underlayer/: octocrab.rs
src/http/: error_response.rs  mod.rs
src/release/: mod.rs
src/template/: mod.rs  multi_target.hbs  single_target.hbs
src/templating/: template.rs
