[package]
name = "rustreleaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.75"
octocrab = "0.34.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.11.24", features = ["stream", "multipart", "json"] }
tokio-util = "0.7.10"
handlebars = "5.1.0"
serde_json = "1.0"
tar = "0.4.40"
flate2 = "0.2.20"
log = "0.4.20"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3"
once_cell = "1.19.0"
git2 = "0.18.2"
sha2 = "0.10.8"
hex = "0.4"
itertools = "0.11.0"
base64 = "0.21.7"
