[package]
name = "rustreleaser"
description = "A tool to easily release Rust projects to GitHub, Homebrew and crates.io"
authors = ["cstef <root@cstef.dev>"]
version = "0.1.8"
edition = "2021"
repository = "https://github.com/cestef/rustreleaser"
license = "MIT"
readme = "README.md"
keywords = ["release", "github", "homebrew", "cratesio"]

[[bin]]
name = "rr"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.18.2", default-features = false, features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
reqwest = { version = "0.11.24", features = ["stream", "multipart", "json"] }
tokio-util = "0.7.10"
handlebars = "5.1.0"
serde_json = "1.0"
tar = "0.4.40"
flate2 = "1.0.28"
log = "0.4.20"
simple_logger = "4.3.3"
once_cell = "1.19.0"
sha2 = "0.10.8"
hex = "0.4"
itertools = "0.12.1"
base64 = "0.22.0"
thiserror = "1.0.57"
config = "0.14.0"
clap = { version = "4.5.1", features = ["derive", "color"] }
semver = "1.0.22"
mime_guess = "2.0.4"
